# orgs

./: Makefile  README.md  manage.py  pyproject.toml
spice_orgs/: admin.py  api.py  apps.py  exceptions.py  models.py  schema.py
spice_orgs/migrations/: 0001_initial.py
spice_orgs/tests/: settings.py  test_organizations.py  test_teams.py  urls.py
